syntax = "proto3";
option go_package = "github.com/hoangNguyenDev3/WanderSphere/backend/pkg/types/proto/pb/newsfeed";
package newsfeed;

import "authpost.proto";

service Newsfeed {
    rpc GetNewsfeed(GetNewsfeedRequest) returns (GetNewsfeedResponse) {}
}

message GetNewsfeedRequest {
    int64 user_id = 1;
}

message GetNewsfeedResponse {
    repeated authpost.PostDetailInfo  posts = 1;
}